Remove scalameta/benchmarks
This project has been unused for ages, and in any case it isn't benchmarking
what we really want to benchmark right now - performance of semanticdb.